@@ -10,7 +10,7 @@ Package: protonvpn-cli
 Architecture: all
 Homepage: https://github.com/ProtonVPN
 Section: net
-Depends: ${python3:Depends}, ${misc:Depends}, python3-dialog, python3-protonvpn-nm-lib (>= 3.3.0), python3-protonvpn-nm-lib (< 3.4.0)
+Depends: ${python3:Depends}, ${misc:Depends}, python3-dialog, python3-protonvpn-nm-lib (>= 3.3.0)
 Description: ProtonVPN CLI (Python 3)
  Package installs official ProtonVPN CLI.
 
