@@ -86,7 +86,7 @@ examples:
 
 CONFIG_HELP = """
 usage:  protonvpn-cli config [-h | --help]
-        [[--list | -l] | --dns <command> [--ip <IP>] | [-p | --protocol] <protocol> | [--alt-routing] <enable|disable> | [-d | --default]]
+        [[--list | -l] | --dns <command> [--ip <IP>] | [-p | --protocol] <protocol> | [-d | --default] | --vpn-accelerator]
 
 optional arguments:
     --dns <command>     Change DNS configurations
@@ -96,6 +96,8 @@ optional arguments:
     -p, --protocol      Change default protocol.
     --alt-routing       Change alternative routing preference.
     -d, --default       Reset to default configurations.
+    --vpn-accelerator   VPN Accelerator enables a set of unique performance
+                        enhancing technologies which can increase VPN speeds by up to 400%.
     -h, --help          Display help message.
 
 examples:
@@ -104,7 +106,7 @@ examples:
     protonvpn-cli config (-l | --list)
     protonvpn-cli config -p tcp
     protonvpn-cli config --protocol udp
-    protonvpn-cli config --alt-routing enable
+    protonvpn-cli config --vpn-accelerator on
     protonvpn-cli config (-d | --default)
     protonvpn-cli config --help
 """ # noqa
